<resources>
    <string name="app_name">LED Panel Control</string>
    <string name="text_title">Text</string>
    <string name="draw_title">Drawing</string>
    <string name="queue_title">Queue</string>
    <string name="settings_title">Settings</string>
    <string name="string_type_text">String type</string>
    <string name="display_text">Display</string>

    <string-array name="string_types">
        <item>Static</item>
        <item>Roller</item>
        <item>Current Time</item>
    </string-array>

    <string-array name="queue_types">
        <item>Queue</item>
        <item>Timetable</item>
    </string-array>

    <string name="about_title">About</string>
    <string name="enter_text_hint">Enter text…</string>
    <string name="pick_color_text">Pick Color</string>
    <string name="speed_format">Speed: x%s</string>
    <string name="queue_type_text">Type</string>

    <string name="time_text">Time</string>
    <string name="item_text">Item</string>
    <string name="time_image_description">Time Image</string>
    <string name="item_image_description">Item Image</string>
    <string name="add_button_text">Add</string>
    <string name="connect_bt">Connect BT</string>

    <string name="clear_text">Clear</string>
    <string name="edit_text">Edit</string>

    <string name="disconnect_bt">Disconnect</string>
    <string name="add_text">Add</string>
    <string name="skip_text">Skip</string>
    <string name="width_text">Width:</string>
    <string name="height_text">Height:</string>
    <string name="save_text">Save</string>
    <string name="device_not_connected">Device not connected!</string>
    <string name="saved_text">Saved!</string>
    <string name="incorrect_size_text">Incorrect size!</string>
    <string name="no_paired_devices_text">No paired devices found!</string>
    <string name="paired_devices_text">Paired Bluetooth Devices</string>
    <string name="no_connected_devices_text">No Connected Device</string>
    <string name="device_name">Device Name:</string>
    <string name="about_text_title">About Text</string>
    <string name="about_draw_title">About Drawing</string>
    <string name="about_queue_title">About Queue</string>
    <string name="about_settings_title">About Settings</string>
    <string name="about_text_description">Text description</string>
    <string name="about_draw_description">Draw description</string>
    <string name="about_queue_description">Queue description</string>
    <string name="about_settings_description">Settings description</string>
    <string name="brightness_text">Brightness:</string>
    <string name="size_restriction_text">Size must be greater than 0!</string>
    <string name="brightness_restriction_text">Brightness must be between 0 and 255!</string>
</resources>