<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/display_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/type"
                    style="@style/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/queue_type_text" />

                <Spinner
                    android:id="@+id/queue_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:entries="@array/queue_types" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/item_card"
                    android:layout_width="match_parent"
                    android:layout_height="257dp"
                    android:layout_marginTop="24dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/add_card"
                    android:layout_width="match_parent"
                    android:layout_height="163dp"
                    android:layout_marginTop="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/time_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:contentDescription="@string/time_image_description"
                            app:layout_constraintBottom_toBottomOf="@+id/time"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/time"
                            app:srcCompat="@drawable/ic_time_light_24dp" />

                        <EditText
                            android:id="@+id/time"
                            style="@style/edit_text_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:autofillHints="time"
                            android:ems="10"
                            android:hint="@string/time_text"
                            android:inputType="time"
                            app:layout_constraintStart_toEndOf="@+id/time_image"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/item_image_description"
                            app:layout_constraintBottom_toBottomOf="@+id/item"
                            app:layout_constraintEnd_toEndOf="@+id/time_image"
                            app:layout_constraintStart_toStartOf="@+id/time_image"
                            app:layout_constraintTop_toTopOf="@+id/item"
                            app:srcCompat="@drawable/ic_item_light_24dp" />

                        <EditText
                            android:id="@+id/item"
                            style="@style/edit_text_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints="text"
                            android:ems="10"
                            android:hint="@string/item_text"
                            android:inputType="textLongMessage"
                            app:layout_constraintStart_toStartOf="@+id/time"
                            app:layout_constraintTop_toBottomOf="@+id/time" />

                        <Button
                            android:id="@+id/add_button"
                            style="@style/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/add_button_text"
                            app:cornerRadius="@dimen/button_corner_radius"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/item"
                            app:strokeColor="@color/gray_200"
                            app:strokeWidth="@dimen/stroke_width" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/display_button"
            style="@style/display_button_style"
            android:text="@string/display_text"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>